# routes/tester_route.js
@@ -4,10 +4,11 @@ const {
   createTester,
   readOneTester,
   readScoreByTester,
+  updateTesterStatus,
 } = require("../controllers/tester_controller");
 
 router.post("/create", createTester);
-router.get("/one/:tester_id", readOneTester);
-router.get("/score/:survey_id/:tester_id", readOneTester);
-
+router.get("/one/:survey_id/:tester_id", readOneTester);
+router.get("/score/:survey_id/:tester_id", readScoreByTester);
+router.patch("/update", updateTesterStatus);
 module.exports = router;
